--- a/functions/package.json
+++ b/functions/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "serve": "firebase emulators:start --only functions",
     "shell": "firebase functions:shell",
-    "start": "npm run shell",
+    "start": "functions-framework --target=esm",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
@@ -14,9 +14,11 @@
   "main": "index.js",
   "type": "module",
   "dependencies": {
+    "@google-cloud/functions-framework": "^3.1.3",
     "chatgpt": "^4.2.0",
     "firebase-admin": "^11.5.0",
     "firebase-functions": "^4.2.1",
+    "node-fetch": "^3.3.0",
     "whois-json": "^2.0.4"
   },
   "devDependencies": {
