--- a/functions/package.json
+++ b/functions/package.json
@@ -18,6 +18,7 @@
     "chatgpt": "^4.2.0",
     "firebase-admin": "^11.5.0",
     "firebase-functions": "^4.2.1",
+    "moment": "^2.29.4",
     "node-fetch": "^3.3.0",
     "whois-json": "^2.0.4"
   },
