--- a/functions/package.json
+++ b/functions/package.json
@@ -15,11 +15,11 @@
   "type": "module",
   "dependencies": {
     "@google-cloud/functions-framework": "^3.1.3",
-    "chatgpt": "^4.2.0",
     "firebase-admin": "^11.5.0",
-    "firebase-functions": "^4.2.1",
+    "firebase-functions": "^5.0.1",
     "moment": "^2.29.4",
     "node-fetch": "^3.3.0",
+    "openai": "^4.43.0",
     "whois-json": "^2.0.4"
   },
   "devDependencies": {
