fix for whois limit problem - use godaddy

--- a/firebase.json
+++ b/firebase.json
@@ -22,7 +22,12 @@
       {
         "source": "/askdomaingpt",
         "function": "askdomaingpt"
+      },
+      {
+        "source": "/checkDomain",
+        "function": "checkDomain"
       }
+
     ]
   },
   "emulators": {
